# cluStaticData

./: .travis.yml  Cargo.toml  README.md
examples/: data.rs  drop.rs  dyn.rs  runtime.rs  slice.rs  slicer.rs
src/: err.rs  lib.rs  macros.rs  set.rs  set_unsafe.rs
src/once_const_static/: generic.rs  macros.rs  mod.rs
src/once_const_static/core/: always_lock.rs  atomic_lock.rs
src/once_runtime/: generic.rs  macros.rs  mod.rs
src/static_core/: _once.rs  always_lock.rs  atomic_lock.rs  mod.rs  once.rs  std.rs
