[package]
name = "cluStaticData"
version = "0.1.6"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
exclude = ["/.travis.yml"]
repository = "https://github.com/clucompany/cluStaticData.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Methods for describing and creating static values. Implemented static value constructors executed in real-time."
keywords = ["static_data", "cluStaticData", "clucompany"]
categories = ["development-tools"]

[dependencies]

