[package]
name = "cluStaticData"
version = "1.1.8"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
exclude = ["/.travis.yml"]
repository = "https://github.com/clucompany/cluStaticData.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Methods for describing and creating static values. Implemented static value constructors executed in real-time."
keywords = ["static_data", "cluStaticData", "clucompany"]
categories = ["development-tools"]

[features]
default = []
enable_runtime = ["spin"]
trivial_bounds = []

[dependencies.spin]
version = "0.5.0"
optional = true


[dependencies]