[package]
name = "cluStaticData"
version = "1.2.0"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
exclude = ["/.travis.yml"]
repository = "https://github.com/clucompany/cluStaticData.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Initializers of static values. Manual initialization, automatic initialization."
keywords = ["manual_initialization", "automatic_initialization", "static_data", "clucompany"]
categories = ["development-tools"]

[dependencies.spin]
version = "0.5.1"


[dependencies]